force-app/main/default/objects/VCG_UI__c/VCG_UI__c.object-meta.xml
<CustomObject>
    <description>This is a trial object for defining fields that can be used in the Visualforce UI so we can get the same behavior for in-memory variables that we get for fields we are saving to the database. I.e. to display an aggregate currency amount, or a shared date (across bundled products for example) and have the value displayed in the user&apos;s default format automatically. No records should be saved in this table, but this table should be visible with read/write access for *all* users.</description>
    <label>VCG UI</label>
    <nameField>
        <label>VCG UI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VCG UIs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>