force-app/main/default/objects/VCG_UI__c/fields/aCurr0__c.field-meta.xml
<CustomField>
    <fullName>aCurr0__c</fullName>
    <description>A generic currency field for zero decimal place currencies (Yen, Chilean peso, etc.)</description>
    <label>aCurr0</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>