force-app/main/default/objects/VCG_UI__c/fields/aCurr2__c.field-meta.xml
<CustomField>
    <fullName>aCurr2__c</fullName>
    <description>A generic currency field for two decimal place currencies (US Dollar, GB Pound, Euro, etc.)</description>
    <label>aCurr2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>