force-app/main/default/objects/VCG_UI__c/fields/aCurr3__c.field-meta.xml
<CustomField>
    <fullName>aCurr3__c</fullName>
    <description>A generic currency field for three decimal place currencies (Afghani, Kuwati dinar, etc.)</description>
    <label>aCurr3</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>