force-app/main/default/objects/VCG_UI__c/fields/aDate__c.field-meta.xml
<CustomField>
    <fullName>aDate__c</fullName>
    <description>A generic date field</description>
    <label>aDate</label>
    <type>Date</type>
</CustomField>